Mac: Don't replace the alpha on the detached toolbar separator color.

The Cocoa browser used to clobber the theme's alpha with 50%. But since
r480275, theme_service.cc makes appropriate adjustments to the color
instead.

BUG=734476

Review-Url: https://codereview.chromium.org/2946183002
Cr-Commit-Position: refs/heads/master@{#481375}

Former-commit-id: 36d91d332d9c8d867cd564f958e7406b7ef893c9